added the the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first guthub repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <h2>my first website</h2>
+    <ul>
+        <li>shop</li>
+        <li>products</li>
+        <li>details</li>
+        <li>about</li>
+    </ul>
+    <div>
+        <h3>first blog</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam soluta necessitatibus perspiciatis ratione, distinctio, voluptatem, odio rerum laborum quis omnis amet ad fuga? Unde quibusdam sequi dolor fugiat, animi expedita!</p>
+    </div>
+      <div>
+        <h3>second blog</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam soluta necessitatibus perspiciatis ratione, distinctio, voluptatem, odio rerum laborum quis omnis amet ad fuga? Unde quibusdam sequi dolor fugiat, animi expedita!</p>
+    </div>
+      <div>
+        <h3>third blog</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam soluta necessitatibus perspiciatis ratione, distinctio, voluptatem, odio rerum laborum quis omnis amet ad fuga? Unde quibusdam sequi dolor fugiat, animi expedita!</p>
+    </div>
+      <div>
+        <h3>fourth blog</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam soluta necessitatibus perspiciatis ratione, distinctio, voluptatem, odio rerum laborum quis omnis amet ad fuga? Unde quibusdam sequi dolor fugiat, animi expedita!</p>
+    </div>
+      <div>
+        <h3>fifth blog</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam soluta necessitatibus perspiciatis ratione, distinctio, voluptatem, odio rerum laborum quis omnis amet ad fuga? Unde quibusdam sequi dolor fugiat, animi expedita!</p>
+    </div>
 </body>
 </html>
