sixth blog push

--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
         <h3>fifth blog</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam soluta necessitatibus perspiciatis ratione, distinctio, voluptatem, odio rerum laborum quis omnis amet ad fuga? Unde quibusdam sequi dolor fugiat, animi expedita!</p>
     </div>
+      <div>
+        <h3>sixthg blog</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam soluta necessitatibus perspiciatis ratione, distinctio, voluptatem, odio rerum laborum quis omnis amet ad fuga? Unde quibusdam sequi dolor fugiat, animi expedita!</p>
+    </div>
 </body>
 </html>
